# nthpartyfinder

./: .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  GO_NO_GO.md  ISA.md  LICENSE  README.md  RELEASING.md  SECURITY.md
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql.yml  docker.yml  fuzz.yml  release.yml  scorecard.yml  security.yml
Plans/: 2026-04-28-v1.0.0-e2e-test-campaign.md  2026-05-17-paperclip-backlog.md  load-paperclip-issues.sh
docs/archive/: BUGFIX_ROADMAP.md  GO_NO_GO.md  README.md  TECH_DEBT.md
nthpartyfinder/: .dockerignore  .gitignore  .pre-commit-config.yaml  BUGFIX_ROADMAP.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.debug  Dockerfile.dev  README.md  TECH_DEBT.md  build.rs  codecov.yml  deny.toml  docker-compose.yml
nthpartyfinder/.cargo/: audit.toml
nthpartyfinder/.github/workflows/: build.yml  docker.yml  release.yml  security.yml
nthpartyfinder/.opengrep/: rules.yml
nthpartyfinder/config/: known_vendors.json  nthpartyfinder.toml  saas_platforms.json
nthpartyfinder/config/vendors/: 1password.json  _schema.json  ada-support.json  adobe-marketo.json  adobe.json  airtable.json  akamai-technologies.json  algolia.json  amazon-cloudfront.json  amazon-com.json  amazon-s3.json  amazon-web-services.json  amplitude.json  appcues.json  apple.json  appsflyer.json  asana.json  atlassian-statuspage.json  atlassian-trello.json  atlassian.json  auth0.json  bamboohr.json  bigcommerce.json  box.json  braintree.json  braze.json  browserstack.json  calendly.json  canva.json  chargebee.json  chronosphere.json  circleci.json  cisco-duo.json  cisco-webex.json  clearbit.json  clickup.json  cloudflare.json  codesandbox.json  coinbase.json  concentrix.json  (+179 more)
nthpartyfinder/data/: README.md  companies.tsv
nthpartyfinder/docs/plans/: 2026-01-02-configurable-settings-design.md  2026-01-09-discovery-features-design.md  2026-01-09-discovery-features-implementation.md  2026-01-11-embedded-ner-gliner.md  2026-01-17-vendor-config-consolidation-design.md  2026-01-18-xyflow-svelte-integration-design.md  2026-01-19-horizontal-graph-design.md  2026-01-19-scan-results-fixes-design.md
nthpartyfinder/examples/: ner_accuracy_test.rs  progress_test.rs  sample_report.rs
nthpartyfinder/frontend/: package-lock.json  package.json  tsconfig.json  vite.config.js
nthpartyfinder/frontend/src/: VendorGraph.svelte  main.ts
nthpartyfinder/frontend/src/components/: FitViewHelper.svelte  VendorTooltip.svelte
nthpartyfinder/frontend/src/lib/: elk-layout.ts  icons.ts  transform.ts
nthpartyfinder/frontend/src/nodes/: LoadMoreNode.svelte  RootNode.svelte  VendorNode.svelte
nthpartyfinder/fuzz/: Cargo.toml
nthpartyfinder/fuzz/fuzz_targets/: dns_txt_spf.rs  domain_base.rs  finalize_host.rs  html_org.rs  web_traffic_html.rs
nthpartyfinder/packaging/homebrew/: nthpartyfinder.rb
nthpartyfinder/scripts/: build-design-system-css.ts  coverage.sh  download-model.ps1  download-model.sh  download-onnxruntime.ps1  filter-opengrep-sarif.py  filter-opengrep-sarif.sh  install-git-hooks.sh  install.sh  migrate_vendor_configs.py  ner-model-source.txt  pre-push.sh  safe-scan.sh  sync-homebrew-formula.sh  test.sh
nthpartyfinder/src/: analysis.rs  app.rs  batch.rs  browser_install.rs  browser_pool.rs  cache_commands.rs  checkpoint.rs  cli.rs  config.rs  coverage.rs  dep_check.rs  dependencies.rs  dns.rs  domain_utils.rs  export.rs  finalize.rs  http_client.rs  interactive.rs  known_vendors.rs  lib.rs  logger.rs  main.rs  memory_monitor.rs  model_fetch.rs  ner_org.rs  org_dataset.rs  org_normalizer.rs  org_role.rs  perf.rs  prefs.rs  rate_limit.rs  result_sink.rs  review.rs  subprocessor.rs  vendor.rs  vendor_registry.rs  verification_logger.rs  web_org.rs  whois.rs
nthpartyfinder/src/discovery/: ct_logs.rs  mod.rs  saas_tenant.rs  subfinder.rs  web_traffic.rs
nthpartyfinder/src/trust_center/: discovery.rs  executor.rs  mod.rs
nthpartyfinder/static/: design-system.css  vendor-graph.css  vendor-graph.js
nthpartyfinder/templates/: report.html
nthpartyfinder/tests/: attribution_eval.rs  deduplication_and_ct_tests.rs  dns_debug_tests.rs  dns_module_tests.rs  dns_performance_tests.rs  dns_summary_test.rs  e2e_main.rs  html_report_tests.rs  initialization_tests.rs  integration_tests.rs  ner_async_parity_tests.rs  ner_org_tests.rs  performance_tests.rs  regression_bug_tests.rs  subprocessor_comprehensive_tests.rs  subprocessor_extraction_tests.rs  subprocessor_integration_tests.rs  subprocessor_tests.rs  web_org_integration_tests.rs
nthpartyfinder/tests/common/: fixtures.rs  mod.rs  wiremock_helpers.rs
nthpartyfinder/tests/e2e/: batch_mode.rs  boundary_validation.rs  cache_subcommands.rs  cli_basics.rs  helpers.rs  output_formats.rs  regression_bugs.rs
nthpartyfinder/tests/fixtures/dns/: dmarc_records.json  spf_records.json  verification_records.json
nthpartyfinder/tests/fixtures/html/: malformed.html  subprocessor_list.html  subprocessor_table.html
nthpartyfinder/tests/fixtures/sast/: known_bad.rs
nthpartyfinder/tests/fixtures/trust_center/: vanta_subprocessors_response.json
nthpartyfinder/tests/fixtures/whois/: sample_responses.txt
packaging/winget/manifests/g/GRCEngineering/NthPartyFinder/1.4.0/: GRCEngineering.NthPartyFinder.installer.yaml  GRCEngineering.NthPartyFinder.locale.en-US.yaml  GRCEngineering.NthPartyFinder.yaml
plugin/: CHANGELOG.md  README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: npf-cache.md  npf-overrides.md  npf-review.md  npf-scan.md
plugin/skills/vendor-mapping-review/: SKILL.md
