[package]
name = "nthpartyfinder"
version = "1.0.0"
edition = "2021"
description = "A cross-platform CLI tool for identifying Nth party vendor relationships through DNS analysis"
authors = ["Security Community"]
license = "MIT"
repository = "https://github.com/your-org/nthpartyfinder"
keywords = ["security", "dns", "vendor-risk", "grc", "third-party"]
categories = ["command-line-utilities", "network-programming"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"
regex = "1.10"
once_cell = "1.19"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["registry", "fmt"] }
url = "2.5"
reqwest = { version = "0.11", features = ["json", "stream"] }
whois-rust = "1.6"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
askama = "0.12"
base64 = "0.21"
futures = "0.3"
scraper = "0.18"
indicatif = { version = "0.18", features = ["tokio"] }
urlencoding = "2.1"
ctrlc = "3.4"
colored = "2.1"
# DNS over HTTPS support
hickory-resolver = { version = "0.24", features = ["dns-over-https", "dns-over-https-rustls"] }
# Headless browser for JavaScript content
headless_chrome = "1.0"
# AI-powered content analysis
fancy-regex = "0.13"
rayon = "1.8"
which = "6"
zip = "0.6"
# Disk-backed result storage with compression (memory efficiency)
zstd = "0.13"
# System memory monitoring for pressure-based throttling
sysinfo = "0.32"
# Embedded NER for organization extraction (replaces Ollama SLM)
# Using load-dynamic to avoid Windows linking issues with ONNX Runtime
gline-rs = { version = "1.0", optional = true }
orp = { version = "0.9.2", optional = true, features = ["load-dynamic"] }

[features]
# NER is included by default. Use --no-default-features to exclude it for smaller builds.
default = ["embedded-ner"]
embedded-ner = ["gline-rs", "orp"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
wiremock = "0.6"
insta = { version = "1.42", features = ["json"] }
rstest = "0.26"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "nthpartyfinder"
path = "src/main.rs"

[[example]]
name = "progress_test"
path = "examples/progress_test.rs"

[[example]]
name = "ner_accuracy_test"
path = "examples/ner_accuracy_test.rs"