[package]
name = "nthpartyfinder"
version = "1.2.0"
edition = "2021"
description = "A cross-platform CLI tool for identifying Nth party vendor relationships through DNS analysis"
authors = ["Security Community"]
license = "MIT"
repository = "https://github.com/grcengineering/nthpartyfinder"
keywords = ["security", "dns", "vendor-risk", "grc", "third-party"]
categories = ["command-line-utilities", "network-programming"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1"
csv = "1.3"
regex = "1.10"
once_cell = "1.19"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["registry", "fmt", "env-filter"] }
url = "2.5"
reqwest = { version = "0.13", features = ["json", "stream", "query"] }
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
askama = "0.16"
base64 = "0.21"
futures = "0.3"
scraper = "0.27"
indicatif = { version = "0.18", features = ["tokio"] }
urlencoding = "2.1"
ctrlc = "3.4"
colored = "3"
# DNS over HTTPS support
hickory-resolver = { version = "0.26", features = ["https-ring"] }
# Headless browser for JavaScript content
headless_chrome = "1.0"
# AI-powered content analysis
fancy-regex = "0.18"
rayon = "1.8"
which = "8"
# zip is used only to read subfinder's deflate-compressed release archive.
# Minimal features: drop bzip2/zstd/lzma/aes compression methods we never use
# (avoids the bzip2-1.0.6-licensed `bzip2` crate and shrinks the dep surface),
# and use the flate2/miniz_oxide deflate backend (MIT) rather than zip's default
# zlib-rs backend, so no `Zlib`-licensed crate enters the tree (matches the
# miniz_oxide backend ort-sys/ureq already use).
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }
# Pin flate2's pure-Rust miniz_oxide backend (MIT) so zip's deflate works under
# `--no-default-features` too (where ort-sys, which otherwise enables it, is
# absent) — and so flate2's zlib-rs backend (Zlib license) is never selected.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# Disk-backed result storage with compression (memory efficiency)
zstd = "0.13"
# System memory monitoring for pressure-based throttling
sysinfo = "0.39"
# Integrity verification for the runtime-fetched NER model
sha2 = "0.11"
hex = "0.4"
# NER for organization extraction (replaces Ollama SLM)
# Using load-dynamic to avoid Windows linking issues with ONNX Runtime
gline-rs = { version = "1.0", optional = true }
orp = { version = "0.9.2", optional = true, features = ["load-dynamic"] }

[features]
# NER organization extraction. Two delivery modes share one inference engine
# (gline-rs + orp); they differ only in how the GLiNER model files reach disk.
#
#   runtime-ner  (default) — model is NOT embedded in the binary. It is fetched
#                            at runtime (consent-gated, SHA-256-verified) from our
#                            GitHub release and cached on disk. This keeps the crate
#                            small enough to publish to crates.io and to
#                            `cargo install` without shipping a ~175 MB blob.
#   embedded-ner           — model is baked into the binary via include_bytes! for
#                            fully self-contained release binaries (offline, no fetch).
#                            Opt-in: `--no-default-features --features embedded-ner`.
#
# Both may be enabled simultaneously; embedded-ner wins (the compile-time embed is
# preferred and the runtime fetch path is compiled out). Use --no-default-features
# with neither for a smaller build that has no NER at all.
default = ["runtime-ner"]
embedded-ner = ["gline-rs", "orp"]
runtime-ner = ["gline-rs", "orp"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
wiremock = "0.6"
insta = { version = "1.42", features = ["json"] }
rstest = "0.26"
assert_cmd = "2.0"
predicates = "3.0"
http = "1.4"

[[bin]]
name = "nthpartyfinder"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/nthpartyfinder-{ target }{ archive-suffix }"
bin-dir = "nthpartyfinder{ binary-ext }"
pkg-fmt = "tgz"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)', 'cfg(coverage)'] }

[[example]]
name = "progress_test"
path = "examples/progress_test.rs"

[[example]]
name = "ner_accuracy_test"
path = "examples/ner_accuracy_test.rs"