[package]
name = "nthpartyfinder"
version = "1.5.0"
edition = "2021"
description = "A cross-platform CLI tool for identifying Nth party vendor relationships through DNS analysis"
authors = ["GRC Engineering"]
license = "MIT"
# The crate's own code is MIT (LICENSE, copied in from the repo root so `cargo package`
# includes it — Cargo won't package files outside the crate root). `data/companies.tsv`
# is separately CC BY-SA 4.0 (see data/README.md + data/LICENSE.CC-BY-SA-4.0, which ship
# alongside it in this same package) — a documented, git-tracked exception to the crate
# license, not an oversight.
homepage = "https://grc.engineering"
documentation = "https://docs.rs/nthpartyfinder"
readme = "README.md"
repository = "https://github.com/grcengineering/nthpartyfinder"
keywords = ["security", "dns", "vendor-risk", "grc", "third-party"]
categories = ["command-line-utilities", "network-programming"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1"
csv = "1.3"
regex = "1.10"
once_cell = "1.19"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["registry", "fmt", "env-filter"] }
url = "2.5"
reqwest = { version = "0.13", features = ["json", "stream", "query"] }
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
askama = "0.16"
base64 = "0.22"
futures = "0.3"
scraper = "0.27"
indicatif = { version = "0.18", features = ["tokio"] }
urlencoding = "2.1"
ctrlc = "3.4"
colored = "3"
# DNS over HTTPS + DNS over TLS support. `tls-ring` (DoT/853) reuses the exact rustls/ring/webpki
# stack `https-ring` already pulls in — zero additional crates — and lets the fallback ladder degrade
# to an encrypted, connection-pooled transport before raw UDP/53 (network-footprint-first ordering).
hickory-resolver = { version = "0.26", features = ["https-ring", "tls-ring", "webpki-roots"] }
# Headless browser for JavaScript content
headless_chrome = "1.0"
# AI-powered content analysis
fancy-regex = "0.18"
psl = "2"
rayon = "1.8"
which = "8"
# zip is used only to read subfinder's deflate-compressed release archive.
# Minimal features: drop bzip2/zstd/lzma/aes compression methods we never use
# (avoids the bzip2-1.0.6-licensed `bzip2` crate and shrinks the dep surface),
# and use the flate2/miniz_oxide deflate backend (MIT) rather than zip's default
# zlib-rs backend, so no `Zlib`-licensed crate enters the tree (matches the
# miniz_oxide backend ort-sys/ureq already use).
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }
# Pin flate2's pure-Rust miniz_oxide backend (MIT) so zip's deflate works under
# `--no-default-features` too (where ort-sys, which otherwise enables it, is
# absent) — and so flate2's zlib-rs backend (Zlib license) is never selected.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# Disk-backed result storage with compression (memory efficiency)
zstd = "0.13"
# System memory monitoring for pressure-based throttling
sysinfo = "0.39"
# Raise the process open-file-descriptor soft limit at startup (used only under cfg(unix), in
# app::raise_open_file_limit) so the binary does not inherit the OS default (256 on macOS) and hit
# EMFILE; also backs the startup orphan-process sweep in browser_pool/discovery::subfinder (all
# scan safety mechanisms are binary-native — no external wrapper script is used or required).
libc = "0.2"
# Integrity verification for the runtime-fetched NER model
sha2 = "0.11"
hex = "0.4"
# NER for organization extraction (replaces Ollama SLM)
# Using load-dynamic to avoid Windows linking issues with ONNX Runtime
gline-rs = { version = "1.0", optional = true }
orp = { version = "0.9.2", optional = true, features = ["load-dynamic"] }

[features]
# NER organization extraction. Two delivery modes share one inference engine
# (gline-rs + orp); they differ only in how the GLiNER model files reach disk.
#
#   runtime-ner  (default) — model is NOT embedded in the binary. It is fetched
#                            at runtime (consent-gated, SHA-256-verified) from our
#                            GitHub release and cached on disk. This keeps the crate
#                            small enough to publish to crates.io and to
#                            `cargo install` without shipping a ~175 MB blob.
#   embedded-ner           — model is baked into the binary via include_bytes! for
#                            fully self-contained release binaries (offline, no fetch).
#                            Opt-in: `--no-default-features --features embedded-ner`.
#
# Both may be enabled simultaneously; embedded-ner wins (the compile-time embed is
# preferred and the runtime fetch path is compiled out). Use --no-default-features
# with neither for a smaller build that has no NER at all.
default = ["runtime-ner"]
embedded-ner = ["gline-rs", "orp"]
runtime-ner = ["gline-rs", "orp"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
wiremock = "0.6"
insta = { version = "1.42", features = ["json"] }
rstest = "0.26"
assert_cmd = "2.0"
predicates = "3.0"
http = "1.4"

[[bin]]
name = "nthpartyfinder"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/nthpartyfinder-{ target }{ archive-suffix }"
bin-dir = "nthpartyfinder{ binary-ext }"
pkg-fmt = "tgz"

# .deb packaging (`cargo deb --no-build`, release.yml). The binary is fully self-contained
# (config/templates/static are compile-time include_str!'d; the one runtime-optional file,
# config/saas_platforms.json, gracefully degrades when absent — same experience a
# `cargo install`/binstall user already has), so only the binary + LICENSE ship.
[package.metadata.deb]
# No maintainer email is published anywhere in this repo (security reports route through
# GitHub's private vulnerability reporting, not email — see SECURITY.md) — a fabricated
# address in Debian's Name <email> field would be worse than an honest non-email string.
maintainer = "GRC Engineering (https://github.com/grcengineering/nthpartyfinder)"
copyright = "2026, GRC Engineering"
license-file = ["LICENSE", "0"]
extended-description = """\
Discover Nth-party vendor relationships via DNS analysis and optional extended \
discovery methods (subprocessor pages, CT logs, subdomain enumeration, SaaS-tenant \
probing, runtime web traffic)."""
depends = "whois"
section = "net"
priority = "optional"
assets = [
    ["target/release/nthpartyfinder", "usr/bin/", "755"],
    ["LICENSE", "usr/share/doc/nthpartyfinder/", "644"],
]

# .rpm packaging (`cargo generate-rpm`, release.yml). Same self-contained-binary rationale.
[package.metadata.generate-rpm]
license = "MIT"
assets = [
    { source = "target/release/nthpartyfinder", dest = "/usr/bin/nthpartyfinder", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/doc/nthpartyfinder/LICENSE", doc = true, mode = "644" },
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)', 'cfg(coverage)'] }

[[example]]
name = "progress_test"
path = "examples/progress_test.rs"

[[example]]
name = "ner_accuracy_test"
path = "examples/ner_accuracy_test.rs"